--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body data-spy="scroll" data-target="#navbarResponsive">
 	<div id="home">
 		<!-- Navigation start -->
-		<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-light bg-dark fixed-top" style="z-index: 10">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
 			  <span class="navbar-toggler-icon"></span>
 			</button>
